--- a/public/css/ajustes.css
+++ b/public/css/ajustes.css
@@ -1,4 +1,4 @@
-:root 
+:root
 {
     --raisin-black-2: hsla(236, 17%, 17%, 0.95)!important;
     --raisin-black-44: hsla(280, 11%, 11%, 0.85)!important;
@@ -13,17 +13,6 @@
     background-color: var( --status-open )!important;
 }
 
-#logo
-{
-    display: block;
-    position: absolute;
-    top: -2vw;
-    left: 2.5vw;
-    width: 8%;
-    height: auto;
-    filter: drop-shadow( 0 0 8,px rgb( 0 0 0 / 0.6 ) );
-    transition: all 0.3s ease-in-out;
-}
 
 @media (min-width: 1400px)
 {
@@ -32,7 +21,7 @@
         margin-left: 15vw;
     }
 
-    .header-bottom::after 
+    .header-bottom::after
     {
         left: 20vw!important;
         width: 8px!important;
@@ -41,6 +30,18 @@
 
 @media (min-width: 1600px)
 {
+    #logo
+    {
+        display: block;
+        position: absolute;
+        top: -1.6vw;
+        left: 2.5vw;
+        width: 8%;
+        height: auto;
+        filter: drop-shadow( 0 0 8,px rgb( 0 0 0 / 0.6 ) );
+        transition: all 0.3s ease-in-out;
+    }
+
     .header-top
     {
         background-color: var(--raisin-black-44);
@@ -56,7 +57,7 @@
         margin-left: 0;
     }
 
-    .header-bottom::after 
+    .header-bottom::after
     {
         left: 14vw!important;
         width: 8px!important;
@@ -73,11 +74,17 @@
         margin-top: 10rem;
     }
 
-    .destaque figure 
+    .destaque figure
     {
         margin-top: 25rem;
     }
-    
+
+    .wrapper
+    {
+        max-width: 1440px;
+        margin: 0 auto;
+    }
+
 }
 
 /*============= 3. Preloader =============*/
@@ -128,4 +135,3 @@
 {
     background: var( --raisin-black-3 );
 }
-  
